--- a/albamen.html
+++ b/albamen.html
@@ -682,6 +682,87 @@
         line-height:1.5;
         color:#cbd5f5;
       }
+
+      /* =========================
+         NEW ALBAMEN AI WIDGET (custom design)
+         ========================= */
+      .ai-widget-floating {
+        position: fixed;
+        right: 18px;
+        bottom: 22px;
+        z-index: 12000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 84px;
+        height: 84px;
+        border-radius: 18px;
+        background: linear-gradient(180deg, rgba(2,6,23,0.85), rgba(2,6,23,0.65));
+        border: 1px solid rgba(56,189,248,0.12);
+        box-shadow: 0 10px 30px rgba(0,0,0,0.6), 0 0 18px rgba(56,189,248,0.06);
+        backdrop-filter: blur(6px);
+      }
+
+      .ai-widget-fab {
+        width: 64px;
+        height: 64px;
+        border-radius: 999px;
+        border: 3px solid rgba(255,255,255,0.06);
+        background: radial-gradient(circle at 30% 30%, #00d4ff 0%, #7209b7 60%);
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        padding: 0;
+        overflow: hidden;
+      }
+
+      .ai-widget-fab img { width: 58px; height: 58px; object-fit: cover; display:block; border-radius:999px; }
+
+      /* Modal style for voice panel */
+      .ai-panel-voice {
+        position: fixed;
+        inset: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        background: rgba(2,6,23,0.6);
+        z-index: 13000;
+      }
+
+      .ai-panel-voice.ai-open { display: flex; }
+
+      .ai-voice-window {
+        width: min(420px, 92vw);
+        max-width: 520px;
+        background: linear-gradient(180deg, rgba(10,14,25,0.98), rgba(6,8,20,0.95));
+        border-radius: 18px;
+        padding: 22px;
+        box-shadow: 0 30px 80px rgba(2,6,23,0.8), 0 0 40px rgba(56,189,248,0.06);
+        border: 1px solid rgba(56,189,248,0.08);
+        color: #e6f0ff;
+        text-align: center;
+      }
+
+      .ai-close-icon {
+        position: absolute;
+        right: 18px;
+        top: 18px;
+        background: transparent;
+        border: none;
+        color: #dbeafe;
+        font-size: 22px;
+        cursor: pointer;
+      }
+
+      .ai-chat-avatar-large { display:flex; align-items:center; justify-content:center; margin: 8px 0 12px; }
+      .ai-chat-avatar-large img { width: 120px; height: 120px; border-radius: 999px; border: 4px solid rgba(255,255,255,0.06); box-shadow: 0 10px 30px rgba(0,0,0,0.6); }
+      .ai-chat-avatar-large img.ai-glow { box-shadow: 0 6px 40px rgba(0,212,255,0.26), 0 0 28px rgba(114,9,183,0.18); transform: scale(1.02); }
+
+      #voice-status-text { margin-top: 8px; color: #d0e8ff; min-height: 36px; }
+      #voice-wave { margin-top: 10px; height: 8px; width: 100%; background: linear-gradient(90deg,#00d4ff,#7209b7); border-radius: 999px; display:block; }
+      .hidden { display: none !important; }
+
     
 
 </style>
@@ -994,6 +1075,28 @@
     </section>
 
     <div data-include-html="/footer-tr.html"></div>
+
+    <!-- NEW Albamen AI Widget (floating) -->
+    <div class="ai-widget-floating" aria-hidden="false">
+      <button id="ai-voice-btn" class="ai-voice-btn ai-widget-fab" aria-label="Albamen ile konuş">
+        <img src="/assets/images/albamenvelara.jpg" alt="Albamen avatar" />
+      </button>
+    </div>
+
+    <!-- Voice modal (used by existing voice script) -->
+    <div class="ai-panel-voice" role="dialog" aria-modal="true" aria-hidden="true">
+      <div class="ai-voice-window">
+        <button class="ai-close-icon" aria-label="Kapat">×</button>
+        <div class="ai-chat-avatar-large">
+          <img src="/assets/images/albamenvelara.jpg" alt="Albamen avatar büyük" />
+        </div>
+        <div id="voice-status-text" aria-live="polite">Albamen hazır — butona tıklayın ve konuşun.</div>
+        <div id="voice-wave" class="hidden" aria-hidden="true"></div>
+        <div id="voice-inline-controls" class="hidden">
+          <button id="voice-stop-btn" class="btn" type="button">Durdur</button>
+        </div>
+      </div>
+    </div>
 
     <script src="/assets/js/include.js"></script>
 
